--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -6,6 +6,13 @@
   padding: 8px;
   font-size: 1rem;
   width: 100%;
+  border: 2px solid var(--secondary-color);
+  border-radius: 5px;
+}
+
+.input:focus {
+  border-color: var(--accent-color);
+  outline: none;
 }
 
 @media (max-width: 768px) {
